[package]
name = "kitana_cryptool"
version = "0.1.0"
edition = "2024"

[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled"] }
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
getrandom = "0.2"
pbkdf2 = "0.12"
rand = "0.8"
rsa = "0.9.10"
base64 = "0.22.1"
md-5 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
sys-locale = "0.3.2"
webbrowser = "1.0"

[build-dependencies]
winres = "0.1"
