[package]
name = "kitana_cryptool"
version = "0.1.2"
edition = "2024"

[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled"] }
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
getrandom = "0.2"
pbkdf2 = "0.12"
rand = "0.8"
rsa = "0.9.10"
ed25519-dalek = { version = "2.0", features = ["pkcs8", "pem"] }
base64 = "0.22.1"
md-5 = "0.10"
crc32fast = "1.3"
sha1 = "0.10"
sha3 = "0.10"
sys-locale = "0.3.2"
webbrowser = "1.0"

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Kitana"
identifier = "com.masato.kitana"
icon = ["resources/icon.icns"]
version = "0.1.2"
copyright = "Copyright © 2026 Masato. All rights reserved."
category = "Developer Tool"
short_description = "Advanced Cryptographic Tool"
long_description = "A pure Rust cryptographic desktop utility using hybrid AES-GCM and RSA digital envelopes."
